add markdown parser

--- a/package.json
+++ b/package.json
@@ -29,20 +29,30 @@
     "@nuxt/kit": "^3.4.3"
   },
   "devDependencies": {
+    "@mdit-vue/plugin-component": "^0.12.0",
+    "@mdit-vue/plugin-frontmatter": "^0.12.0",
+    "@mdit-vue/plugin-sfc": "^0.12.0",
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/module-builder": "^0.3.0",
     "@nuxt/types": "^2.16.3",
     "@nuxt/typescript-build": "^3.0.1",
+    "@types/hash-sum": "^1.0.0",
     "@types/lodash.template": "^4.5.1",
     "@types/node": "^18.15.11",
     "@types/sass": "^1.45.0",
     "changelogen": "^0.5.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
+    "glob": "^10.2.3",
+    "hash-sum": "^2.0.0",
     "lodash.template": "^4.5.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-custom-block": "^0.1.2",
     "nuxt": "^2.16.3",
+    "rimraf": "^5.0.0",
     "sass": "1.33.0",
     "sass-loader": "^10.1.1",
+    "slugify": "^1.6.6",
     "ts-loader": "^8.4.0",
     "tslib": "^2.5.0",
     "typescript": "^4.8.4",
