--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@nuxt/types",
       "@nuxt/typescript-build",
       "@types/node",
-      "@types/lodash.template",
+      "@types/lodash.template"
     ]
   },
   "exclude": [
