--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "eslint": "^8.39.0",
     "glob": "^10.2.3",
     "hash-sum": "^2.0.0",
+    "html-entities": "^2.3.3",
     "lodash.template": "^4.5.0",
     "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.7",
     "markdown-it-custom-block": "^0.1.2",
     "nuxt": "^2.16.3",
     "rimraf": "^5.0.0",
@@ -57,6 +59,7 @@
     "tslib": "^2.5.0",
     "typescript": "^4.8.4",
     "vue": "^2.7.10",
+    "vue-docgen-api": "^4.72.2",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "webpack": "^4.46.0"
