--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.39.0",
     "glob": "^10.2.3",
     "hash-sum": "^2.0.0",
+    "highlight.js": "^11.8.0",
     "html-entities": "^2.3.3",
     "lodash.template": "^4.5.0",
     "markdown-it": "^13.0.1",
